comet/ingressroute-comet-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: comet.${dns_domain}
  namespace: comet
spec:
  routes:
    - match: Host(`comet.${dns_domain}`)
      kind: Rule
      services:
        - name: comet-public
          kind: Service
          port: 8000
      middlewares:  
        - name: chain-public-stremio-addon
          namespace: traefik
